[package]
name = "wav"
description = "This is a crate for reading in and writing out wave files. It supports bit depths of 8, 16, 24 bits, and 32-bit IEEE Float, and any number of channels."
documentation = "https://docs.rs/wav"
repository = "https://github.com/Fluhzar/WAV"
license = "LGPL-3.0"
version = "1.0.0"
authors = ["Fluhzar <fluhzar@pm.me>"]
edition = "2018"
keywords = ["audio", "file", "file-format", "file-io"]
categories = ["data-structures", "filesystem", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riff = "^1.0"
